set vertical scroller always visible, to avoid width glitches on navigation

--- a/assets/css/common/layout.styl
+++ b/assets/css/common/layout.styl
@@ -1,3 +1,8 @@
+// Protect width change between pages nevigation
+//
+body
+  overflow-y scroll
+
 //
 // Horizontal comma-separated list
 //
